# posture-alignment-cv

./: .gitignore  CALIBRATION.md  POSTURE_DESIGN_DOC.md  README.md  pyproject.toml  requirements.txt  run_calibration.py
src/: calibration.py
src/ui/: calibration_view.py
tests/: test_calibration.py
